--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="dashboard">
+
+        </div>
+
+        <div class="top_bar">
+
+        </div>
+
+        <div class="content">
+            
+        </div>
+    </div>
 </body>
 </html>
