--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <div class="container">
         <div class="dashboard">
+            <object data="dashboard.svg" width="50" height="50"></object>
+            <h3>Dashboard</h3>
 
+
+            
         </div>
 
         <div class="top_bar">
@@ -17,7 +21,7 @@
         </div>
 
         <div class="content">
-            
+
         </div>
     </div>
 </body>
