--- a/index.html
+++ b/index.html
@@ -5,15 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div class="dashboard">
-            <object data="dashboard.svg" width="50" height="50"></object>
-            <h3>Dashboard</h3>
+            <div class="header">
+                <object data="dashboard.svg" width="50" height="50"></object>
+                <h3>Dashboard</h3>
+            </div>
 
-
+            <div class="pages">
+                <h4>Home</h4>
+                <h4>Profile</h4>
+                <h4>Messages</h4>
+                <h4>History</h4>
+                <h4>Tasks</h4>
+                <h4>Communities</h4>
+            </div>
             
+            <div class="manage">
+                <h4>Settings</h4>
+                <h4>Support</h4>
+                <h4>Privacy</h4>
+            </div>
         </div>
 
         <div class="top_bar">
