Implemented search bar area html and css, along with profile icons.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,22 @@
         </div>
 
         <div class="top_bar">
+            <div class="top">
+                <div class="search_bar">
+                    <object data="images/magnify.svg" width="25" height="25"></object>
+                    <input type="text" placeholder="Search...">
+                </div>
+                
+                <div class="profile_notif">
+                    <object data="images/bell-ring-outline.svg" width="25" height="25"></object>
+                    <object data="images/face-man-profile.svg" width="45" height="45"></object>
+                    <h3>Alice He</h3>
+                </div>
+            </div>
 
+            <div class="bottom">
+
+            </div>
         </div>
 
         <div class="content">
