Implemented top bar html and css.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,20 @@
             </div>
 
             <div class="bottom">
+                <div class="profile">
+                    <object data="images/face-man-profile.svg" width="65" height="65"></object>
+                    
+                    <div class="greetings">
+                        <p>Hi there, </p>
+                        <h3>Alice He (@alice)</h3>
+                    </div>
+                </div>
 
+                <div class="actions">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
         </div>
 
