Implemented html and css for announcements section.

--- a/index.html
+++ b/index.html
@@ -205,8 +205,33 @@
             <div class="updates">
                 <div class="announcements">
                     <h4>Announcements</h4>
+                    <div class="notices">
+                        <div class="notice1">
+                            <h6>Site Maintenance</h6>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            </p>
+                        </div>
 
+                        <div class="notice2">
+                            <h6>Site Maintenance</h6>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            </p>
+                        </div>
+
+                        <div class="notice3">
+                            <h6>Site Maintenance</h6>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            </p>
+                        </div>
+                    </div>
                 </div>
+                
                 <div class="trending">
                     <h4>Trending</h4>
 
