--- a/index.html
+++ b/index.html
@@ -231,10 +231,26 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="trending">
                     <h4>Trending</h4>
+                    <div class="notices">
+                        <div class="person">
+                            <object data="images/face-man-profile.svg" width="45" height="45"></object>
+                            <div class="topic">
+                                <h6>@alice1</h6>
+                                <p>Lorem ipsum dolor sit...</p>
+                            </div>
+                        </div> 
 
+                        <div class="person">
+                            <object data="images/face-man-profile.svg" width="45" height="45"></object>
+                            <div class="topic">
+                                <h6>@alice2</h6>
+                                <p>Lorem ipsum dolor sit...</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
